--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.10",
+        "php-flasher/flasher-pnotify-laravel": "^1.7",
         "realrashid/sweet-alert": "^5.1"
     },
     "require-dev": {
